# pcb_defect_detector_n_classifier

./: README.md  main.py  pyproject.toml
ML/: PCB_Project_Report (1).docx  exp1.py  exp2.py  inference.py  inter1.py  main.py  pcb_researchable.txt  prepare_dataset.py  pyproject.toml  train.py  yolo11m_train.py  yolov11s_train.py
ML/pcb_classifier/: generate_nonpcb.py  predict_man.py  prepare_kaggle_nonpcb.py  randomresize_pcb.py  resize.py  split_dataset.py  train.py
backend/: main.py
