[project]
name = "pcb-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.1.0",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "plotly>=6.5.0",
    "reportlab>=4.4.6",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.233",
]
